unpackaged/main/default/objects/project_cloud__Configuration_Options__c/project_cloud__Configuration_Options__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The options here, enable expermental or beta options in the application. Please modify them with caution.</description>
    <label>Configuration Options</label>
</CustomObject>