unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Allow_Duplicate_Time_Entries__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allow_Duplicate_Time_Entries__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To save space and eliminate confusion on the timecard duplicate time entries are not permitted. If you would like to allow your users to enter more than one entry per day against the same unit of work enbale this option.</description>
    <inlineHelpText>To allow users to enter more than one entry per day against the same unit of work enable this option.</inlineHelpText>
    <label>Allow Duplicate Time Entries</label>
    <type>Checkbox</type>
</CustomField>