unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Disable_Chatter__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Disable_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable chatter notifications for project status changes</description>
    <label>Disable Chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>