unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Enable_Batch_Project_Cloning__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Enable_Batch_Project_Cloning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables project cloning from the wizard to execute as a batch job. Enable this setting if you are receiving Apex CPU Limit exceptions when cloning complex projects and templates.</description>
    <inlineHelpText>Enables project cloning from the wizard to execute as a batch job. Enable this setting if you are receiving Apex CPU Limit exceptions when cloning complex projects and templates.</inlineHelpText>
    <label>Enable Batch Project Cloning</label>
    <type>Checkbox</type>
</CustomField>