unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Enable_Legacy_Resourcing_Capacity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Enable_Legacy_Resourcing_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, allows entry of percentage based capabilities.</description>
    <label>Enable Legacy Resourcing Capacity</label>
    <type>Checkbox</type>
</CustomField>