unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Hide_Sub_Tasks_External__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hide_Sub_Tasks_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hides all Sub Tasks in the External Project View</description>
    <inlineHelpText>Hides all Sub Tasks in the External Project View</inlineHelpText>
    <label>Hide Sub Tasks in External View</label>
    <type>Checkbox</type>
</CustomField>