unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Hide_Tasks_External__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hide_Tasks_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the explicit visibility of project tasks in the external project view, via &#39;Show in External View&#39; on the Project Task</description>
    <inlineHelpText>Allow the explicit visibility of project tasks in the external project view, via &#39;Show in External View&#39; on the Project Task</inlineHelpText>
    <label>Hide Project Tasks in External View</label>
    <type>Checkbox</type>
</CustomField>