unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Hide_Tickets_External__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hide_Tickets_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the explicit visibility of project tickets in the external project view, via &#39;Show in External View&#39; on the Ticket</description>
    <inlineHelpText>Allow the explicit visibility of tickets in the external project view, via &#39;Show in External View&#39; on the Ticket</inlineHelpText>
    <label>Hide Tickets in External View</label>
    <type>Checkbox</type>
</CustomField>