unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Initial_Version__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Initial_Version__c</fullName>
    <description>This is the first version of the managed package that was installed into the org</description>
    <label>Initial Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>