unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__IsMoveMultiple__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsMoveMultiple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable updating of the length or dates of more than one task, this option can be checked. For more complex projects this might introduce dependency sync errors.</description>
    <label>Move Multiple</label>
    <type>Checkbox</type>
</CustomField>