unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__IsRollup_Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsRollup_Worked_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the Work Time Entries should be rolled up onto the Worked_Hours__c field on the Project, Phase, Task and Ticket objects. When disabled a custom trigger can be used to perform more advanced calculations on worked hours</description>
    <label>Rollup Worked Hours</label>
    <type>Checkbox</type>
</CustomField>