unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Migrated_Version__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Migrated_Version__c</fullName>
    <description>This is the last version that the migration script was run</description>
    <label>Migrated Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>