unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Namespace__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Namespace__c</fullName>
    <label>Namespace</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>