unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Only_Allocatable__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Only_Allocatable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict the results of the user queries to users with the Allocatable checkbox</description>
    <inlineHelpText>When resourcing and assigning capabilities, should only the users with the &#39;Allocatable&#39; checkbox be returned. This is useful for large organisations who want to keep the</inlineHelpText>
    <label>Only Allocatable</label>
    <type>Checkbox</type>
</CustomField>