unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Resourcing_Disable_Events__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resourcing_Disable_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Salesforce events being included in any resourcing calculations</description>
    <inlineHelpText>Disable Salesforce events being included in any resourcing calculations</inlineHelpText>
    <label>Resourcing Disable Events</label>
    <type>Checkbox</type>
</CustomField>