unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Resourcing_Disable_Load__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resourcing_Disable_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resourcing Disable Load Calculations</label>
    <type>Checkbox</type>
</CustomField>