unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__Sort_Projects_Alphabetically__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sort_Projects_Alphabetically__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the Project Phases and Tasks lists will be sorted alphabetically not by start date. This affects the Project Task View, the Project Tree, and the Gantt Chart</inlineHelpText>
    <label>Sort Projects Alphabetically</label>
    <type>Checkbox</type>
</CustomField>