unpackaged/main/default/objects/project_cloud__Configuration_Options__c/fields/project_cloud__WalkMe_Enabled__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__WalkMe_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether or not the WalkMe interactive walkthroughs are available for use.</description>
    <label>WalkMe Enabled</label>
    <type>Checkbox</type>
</CustomField>